y.output
State 3 conflicts: 1 shift/reduce
State 10 conflicts: 13 shift/reduce
State 30 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 58 conflicts: 2 shift/reduce
State 59 conflicts: 1 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 109 conflicts: 14 shift/reduce
State 152 conflicts: 2 shift/reduce
State 175 conflicts: 1 shift/reduce
State 190 conflicts: 2 shift/reduce
State 191 conflicts: 2 shift/reduce
State 192 conflicts: 1 shift/reduce
State 193 conflicts: 1 shift/reduce
State 194 conflicts: 1 shift/reduce
State 195 conflicts: 1 shift/reduce
State 202 conflicts: 1 shift/reduce
State 206 conflicts: 1 shift/reduce
State 209 conflicts: 1 shift/reduce
State 212 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 224 conflicts: 1 shift/reduce
State 283 conflicts: 1 shift/reduce
State 285 conflicts: 1 shift/reduce


Grammar

    0 $accept: file_input $end

    1 file_input: %empty
    2           | T_newline file_input
    3           | stmt file_input
    4           | T_eof

    5 stmt: simple_stmt
    6     | compound_stmt

    7 simple_stmt: small_stmt next_simple_stmt

    8 next_simple_stmt: end_simple_stmt
    9                 | T_semi_colon small_stmt next_simple_stmt

   10 end_simple_stmt: T_newline
   11                | T_semi_colon T_newline
   12                | %empty

   13 small_stmt: expr_stmt
   14           | del_stmt
   15           | pass_stmt
   16           | flow_stmt
   17           | import_stmt

   18 expr_stmt: testlist_star_expr next_expr_stmt

   19 next_expr_stmt: augassign testlist
   20               | last_expr_stmt

   21 last_expr_stmt: %empty
   22               | T_eq testlist_star_expr last_expr_stmt

   23 testlist_star_expr: first_testlist_star_expr last_testlist_star_expr

   24 first_testlist_star_expr: test
   25                         | star_expr

   26 last_testlist_star_expr: %empty
   27                        | T_comma end_testlist_star_expr

   28 end_testlist_star_expr: %empty
   29                       | test last_testlist_star_expr
   30                       | star_expr last_testlist_star_expr

   31 augassign: T_plus_eq
   32          | T_minus_eq
   33          | T_star_eq
   34          | T_div_eq
   35          | T_mod_eq
   36          | T_or_eq
   37          | T_xor_eq

   38 del_stmt: T_del exprlist

   39 pass_stmt: T_pass

   40 flow_stmt: break_stmt
   41          | continue_stmt
   42          | return_stmt

   43 break_stmt: T_break

   44 continue_stmt: T_continue

   45 return_stmt: T_return optional_return

   46 optional_return: %empty
   47                | testlist

   48 import_stmt: import_name
   49            | import_from

   50 import_name: T_import dotted_as_names

   51 import_from: T_from dotted_name T_import end_import_from

   52 end_import_from: T_star
   53                | T_Lparan import_as_names T_Rparan
   54                | import_as_names

   55 import_as_name: T_name optional_t_name

   56 optional_t_name: %empty
   57                | T_as T_name

   58 dotted_as_name: dotted_name optional_t_name

   59 import_as_names: import_as_name end_import_as_names

   60 end_import_as_names: %empty
   61                    | T_comma import_as_name end_import_as_names

   62 dotted_as_names: dotted_as_name end_dotted_as_names

   63 end_dotted_as_names: %empty
   64                    | T_comma dotted_as_name end_dotted_as_names

   65 dotted_name: T_name optional_dotted_name

   66 optional_dotted_name: %empty
   67                     | T_dot dotted_name

   68 compound_stmt: if_stmt
   69              | for_stmt
   70              | funcdef

   71 funcdef: T_def T_name parameters T_colon suite

   72 parameters: T_Lparan optional_typedargslist T_Rparan

   73 optional_typedargslist: %empty
   74                       | typedargslist

   75 typedargslist: T_name optional_eq_test repeat_optional_eq_test

   76 optional_eq_test: %empty
   77                 | T_eq test

   78 repeat_optional_eq_test: %empty
   79                        | T_comma T_name optional_eq_test repeat_optional_eq_test

   80 if_stmt: T_if test T_colon suite elif_stmt optional_else

   81 elif_stmt: %empty
   82          | T_elif test T_colon suite elif_stmt

   83 for_stmt: T_for exprlist T_in testlist T_colon suite optional_else

   84 optional_else: %empty
   85              | T_else T_colon suite

   86 suite: simple_stmt
   87      | T_newline T_indent stmt repeat_stmt T_dedent

   88 repeat_stmt: %empty
   89            | stmt repeat_stmt

   90 test: or_test optional_if_else

   91 optional_if_else: %empty
   92                 | T_if or_test T_else test

   93 or_test: and_test repeat_or_test

   94 repeat_or_test: %empty
   95               | T_or and_test repeat_or_test

   96 and_test: not_test repeat_and_test

   97 repeat_and_test: %empty
   98                | T_and not_test repeat_and_test

   99 not_test: T_not not_test
  100         | comparison

  101 comparison: expr repeat_comp_expr

  102 repeat_comp_expr: %empty
  103                 | comp_op expr repeat_comp_expr

  104 comp_op: T_lt
  105        | T_gt
  106        | T_deq
  107        | T_ge
  108        | T_le
  109        | T_noteq
  110        | T_in
  111        | T_notin
  112        | T_is
  113        | T_isnot

  114 star_expr: T_star expr

  115 expr: xor_expr repeat_expr

  116 repeat_expr: %empty
  117            | T_bitwiseor xor_expr repeat_expr

  118 xor_expr: and_expr repeat_xor_expr

  119 repeat_xor_expr: %empty
  120                | T_bitwisexor and_expr repeat_xor_expr

  121 and_expr: shift_expr repeat_and_expr

  122 repeat_and_expr: %empty
  123                | T_bitwiseand shift_expr repeat_and_expr

  124 shift_expr: arith_expr repeat_shift_expr

  125 repeat_shift_expr: %empty
  126                  | T_leftshift arith_expr repeat_shift_expr
  127                  | T_rightshift arith_expr repeat_shift_expr

  128 arith_expr: term last_arith_expr

  129 last_arith_expr: %empty
  130                | T_plus term last_arith_expr
  131                | T_minus term last_arith_expr

  132 term: factor last_term

  133 last_term: %empty
  134          | T_star factor last_term
  135          | T_divide factor last_term
  136          | T_mod factor last_term
  137          | T_double_divide factor last_term

  138 factor: power
  139       | T_plus factor
  140       | T_minus factor
  141       | T_tilde factor

  142 power: atom_expr optional_factor

  143 optional_factor: %empty
  144                | T_double_star factor

  145 atom_expr: atom repeat_trailer

  146 repeat_trailer: %empty
  147               | trailer repeat_trailer

  148 atom: T_Lparan optional_testlist_comp T_Rparan
  149     | T_squarebleft optional_testlist_comp T_squarebright
  150     | T_name
  151     | T_number
  152     | T_string repeat_string
  153     | T_ellipsis
  154     | T_none
  155     | T_true
  156     | T_false

  157 optional_testlist_comp: %empty
  158                       | testlist_comp

  159 repeat_string: %empty
  160              | T_string repeat_string

  161 testlist_comp: first_testlist_comp last_testlist_comp

  162 first_testlist_comp: test
  163                    | star_expr

  164 last_testlist_comp: repeat_testlist_comp optional_comma

  165 repeat_testlist_comp: %empty
  166                     | T_comma end_testlist_comp

  167 end_testlist_comp: test repeat_testlist_comp
  168                  | star_expr repeat_testlist_comp

  169 trailer: T_Lparan optional_arglist T_Rparan
  170        | T_squarebleft subscriptlist T_squarebright
  171        | T_dot T_name

  172 optional_arglist: %empty
  173                 | arglist

  174 subscriptlist: subscript repeat_subscript optional_comma

  175 repeat_subscript: %empty
  176                 | T_comma subscript repeat_subscript

  177 subscript: test
  178          | optional_test T_colon optional_test optional_sliceop

  179 optional_test: %empty
  180              | test

  181 optional_sliceop: %empty
  182                 | sliceop

  183 sliceop: T_colon optional_test

  184 exprlist: first_exprlist last_exprlist optional_comma

  185 first_exprlist: expr
  186               | star_expr

  187 last_exprlist: %empty
  188              | T_comma first_exprlist last_exprlist

  189 optional_comma: %empty
  190               | T_comma

  191 testlist: test repeat_test optional_comma

  192 repeat_test: %empty
  193            | T_comma test repeat_test

  194 arglist: argument repeat_argument optional_comma

  195 repeat_argument: %empty
  196                | T_comma argument repeat_argument

  197 argument: test T_eq test
  198         | T_double_star test
  199         | T_star test


Terminals, with rules where they appear

$end (0) 0
error (256)
T_name (258) 55 57 65 71 75 79 150 171
T_number (259) 151
T_string (260) 152 160
T_newline (261) 2 10 11 87
T_eof (262) 4
T_semi_colon (263) 9 11
T_eq (264) 22 77 197
T_comma (265) 27 61 64 79 166 176 188 190 193 196
T_plus_eq (266) 31
T_minus_eq (267) 32
T_star_eq (268) 33
T_div_eq (269) 34
T_mod_eq (270) 35
T_or_eq (271) 36
T_xor_eq (272) 37
T_del (273) 38
T_pass (274) 39
T_break (275) 43
T_continue (276) 44
T_return (277) 45
T_import (278) 50 51
T_from (279) 51
T_star (280) 52 114 134 199
T_Lparan (281) 53 72 148 169
T_Rparan (282) 53 72 148 169
T_as (283) 57
T_dot (284) 67 171
T_if (285) 80 92
T_colon (286) 71 80 82 83 85 178 183
T_elif (287) 82
T_else (288) 85 92
T_for (289) 83
T_in (290) 83 110
T_indent (291) 87
T_dedent (292) 87
T_or (293) 95
T_and (294) 98
T_not (295) 99
T_lt (296) 104
T_gt (297) 105
T_deq (298) 106
T_ge (299) 107
T_le (300) 108
T_noteq (301) 109
T_is (302) 112
T_isnot (303) 113
T_notin (304) 111
T_bitwiseor (305) 117
T_bitwiseand (306) 123
T_bitwisexor (307) 120
T_leftshift (308) 126
T_rightshift (309) 127
T_plus (310) 130 139
T_minus (311) 131 140
T_divide (312) 135
T_mod (313) 136
T_double_divide (314) 137
T_tilde (315) 141
T_double_star (316) 144 198
T_squarebleft (317) 149 170
T_squarebright (318) 149 170
T_ellipsis (319) 153
T_none (320) 154
T_true (321) 155
T_false (322) 156
T_def (323) 71


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
file_input (70)
    on left: 1 2 3 4, on right: 0 2 3
stmt (71)
    on left: 5 6, on right: 3 87 89
simple_stmt (72)
    on left: 7, on right: 5 86
next_simple_stmt (73)
    on left: 8 9, on right: 7 9
end_simple_stmt (74)
    on left: 10 11 12, on right: 8
small_stmt (75)
    on left: 13 14 15 16 17, on right: 7 9
expr_stmt (76)
    on left: 18, on right: 13
next_expr_stmt (77)
    on left: 19 20, on right: 18
last_expr_stmt (78)
    on left: 21 22, on right: 20 22
testlist_star_expr (79)
    on left: 23, on right: 18 22
first_testlist_star_expr (80)
    on left: 24 25, on right: 23
last_testlist_star_expr (81)
    on left: 26 27, on right: 23 29 30
end_testlist_star_expr (82)
    on left: 28 29 30, on right: 27
augassign (83)
    on left: 31 32 33 34 35 36 37, on right: 19
del_stmt (84)
    on left: 38, on right: 14
pass_stmt (85)
    on left: 39, on right: 15
flow_stmt (86)
    on left: 40 41 42, on right: 16
break_stmt (87)
    on left: 43, on right: 40
continue_stmt (88)
    on left: 44, on right: 41
return_stmt (89)
    on left: 45, on right: 42
optional_return (90)
    on left: 46 47, on right: 45
import_stmt (91)
    on left: 48 49, on right: 17
import_name (92)
    on left: 50, on right: 48
import_from (93)
    on left: 51, on right: 49
end_import_from (94)
    on left: 52 53 54, on right: 51
import_as_name (95)
    on left: 55, on right: 59 61
optional_t_name (96)
    on left: 56 57, on right: 55 58
dotted_as_name (97)
    on left: 58, on right: 62 64
import_as_names (98)
    on left: 59, on right: 53 54
end_import_as_names (99)
    on left: 60 61, on right: 59 61
dotted_as_names (100)
    on left: 62, on right: 50
end_dotted_as_names (101)
    on left: 63 64, on right: 62 64
dotted_name (102)
    on left: 65, on right: 51 58 67
optional_dotted_name (103)
    on left: 66 67, on right: 65
compound_stmt (104)
    on left: 68 69 70, on right: 6
funcdef (105)
    on left: 71, on right: 70
parameters (106)
    on left: 72, on right: 71
optional_typedargslist (107)
    on left: 73 74, on right: 72
typedargslist (108)
    on left: 75, on right: 74
optional_eq_test (109)
    on left: 76 77, on right: 75 79
repeat_optional_eq_test (110)
    on left: 78 79, on right: 75 79
if_stmt (111)
    on left: 80, on right: 68
elif_stmt (112)
    on left: 81 82, on right: 80 82
for_stmt (113)
    on left: 83, on right: 69
optional_else (114)
    on left: 84 85, on right: 80 83
suite (115)
    on left: 86 87, on right: 71 80 82 83 85
repeat_stmt (116)
    on left: 88 89, on right: 87 89
test (117)
    on left: 90, on right: 24 29 77 80 82 92 162 167 177 180 191 193
    197 198 199
optional_if_else (118)
    on left: 91 92, on right: 90
or_test (119)
    on left: 93, on right: 90 92
repeat_or_test (120)
    on left: 94 95, on right: 93 95
and_test (121)
    on left: 96, on right: 93 95
repeat_and_test (122)
    on left: 97 98, on right: 96 98
not_test (123)
    on left: 99 100, on right: 96 98 99
comparison (124)
    on left: 101, on right: 100
repeat_comp_expr (125)
    on left: 102 103, on right: 101 103
comp_op (126)
    on left: 104 105 106 107 108 109 110 111 112 113, on right: 103
star_expr (127)
    on left: 114, on right: 25 30 163 168 186
expr (128)
    on left: 115, on right: 101 103 114 185
repeat_expr (129)
    on left: 116 117, on right: 115 117
xor_expr (130)
    on left: 118, on right: 115 117
repeat_xor_expr (131)
    on left: 119 120, on right: 118 120
and_expr (132)
    on left: 121, on right: 118 120
repeat_and_expr (133)
    on left: 122 123, on right: 121 123
shift_expr (134)
    on left: 124, on right: 121 123
repeat_shift_expr (135)
    on left: 125 126 127, on right: 124 126 127
arith_expr (136)
    on left: 128, on right: 124 126 127
last_arith_expr (137)
    on left: 129 130 131, on right: 128 130 131
term (138)
    on left: 132, on right: 128 130 131
last_term (139)
    on left: 133 134 135 136 137, on right: 132 134 135 136 137
factor (140)
    on left: 138 139 140 141, on right: 132 134 135 136 137 139 140
    141 144
power (141)
    on left: 142, on right: 138
optional_factor (142)
    on left: 143 144, on right: 142
atom_expr (143)
    on left: 145, on right: 142
repeat_trailer (144)
    on left: 146 147, on right: 145 147
atom (145)
    on left: 148 149 150 151 152 153 154 155 156, on right: 145
optional_testlist_comp (146)
    on left: 157 158, on right: 148 149
repeat_string (147)
    on left: 159 160, on right: 152 160
testlist_comp (148)
    on left: 161, on right: 158
first_testlist_comp (149)
    on left: 162 163, on right: 161
last_testlist_comp (150)
    on left: 164, on right: 161
repeat_testlist_comp (151)
    on left: 165 166, on right: 164 167 168
end_testlist_comp (152)
    on left: 167 168, on right: 166
trailer (153)
    on left: 169 170 171, on right: 147
optional_arglist (154)
    on left: 172 173, on right: 169
subscriptlist (155)
    on left: 174, on right: 170
repeat_subscript (156)
    on left: 175 176, on right: 174 176
subscript (157)
    on left: 177 178, on right: 174 176
optional_test (158)
    on left: 179 180, on right: 178 183
optional_sliceop (159)
    on left: 181 182, on right: 178
sliceop (160)
    on left: 183, on right: 182
exprlist (161)
    on left: 184, on right: 38 83
first_exprlist (162)
    on left: 185 186, on right: 184 188
last_exprlist (163)
    on left: 187 188, on right: 184 188
optional_comma (164)
    on left: 189 190, on right: 164 174 184 191 194
testlist (165)
    on left: 191, on right: 19 47 83
repeat_test (166)
    on left: 192 193, on right: 191 193
arglist (167)
    on left: 194, on right: 173
repeat_argument (168)
    on left: 195 196, on right: 194 196
argument (169)
    on left: 197 198 199, on right: 194 196


State 0

    0 $accept: . file_input $end

    T_name         shift, and go to state 1
    T_number       shift, and go to state 2
    T_string       shift, and go to state 3
    T_newline      shift, and go to state 4
    T_eof          shift, and go to state 5
    T_del          shift, and go to state 6
    T_pass         shift, and go to state 7
    T_break        shift, and go to state 8
    T_continue     shift, and go to state 9
    T_return       shift, and go to state 10
    T_import       shift, and go to state 11
    T_from         shift, and go to state 12
    T_star         shift, and go to state 13
    T_Lparan       shift, and go to state 14
    T_if           shift, and go to state 15
    T_for          shift, and go to state 16
    T_not          shift, and go to state 17
    T_plus         shift, and go to state 18
    T_minus        shift, and go to state 19
    T_tilde        shift, and go to state 20
    T_squarebleft  shift, and go to state 21
    T_ellipsis     shift, and go to state 22
    T_none         shift, and go to state 23
    T_true         shift, and go to state 24
    T_false        shift, and go to state 25
    T_def          shift, and go to state 26

    $default  reduce using rule 1 (file_input)

    file_input                go to state 27
    stmt                      go to state 28
    simple_stmt               go to state 29
    small_stmt                go to state 30
    expr_stmt                 go to state 31
    testlist_star_expr        go to state 32
    first_testlist_star_expr  go to state 33
    del_stmt                  go to state 34
    pass_stmt                 go to state 35
    flow_stmt                 go to state 36
    break_stmt                go to state 37
    continue_stmt             go to state 38
    return_stmt               go to state 39
    import_stmt               go to state 40
    import_name               go to state 41
    import_from               go to state 42
    compound_stmt             go to state 43
    funcdef                   go to state 44
    if_stmt                   go to state 45
    for_stmt                  go to state 46
    test                      go to state 47
    or_test                   go to state 48
    and_test                  go to state 49
    not_test                  go to state 50
    comparison                go to state 51
    star_expr                 go to state 52
    expr                      go to state 53
    xor_expr                  go to state 54
    and_expr                  go to state 55
    shift_expr                go to state 56
    arith_expr                go to state 57
    term                      go to state 58
    factor                    go to state 59
    power                     go to state 60
    atom_expr                 go to state 61
    atom                      go to state 62


State 1

  150 atom: T_name .

    $default  reduce using rule 150 (atom)


State 2

  151 atom: T_number .

    $default  reduce using rule 151 (atom)


State 3

  152 atom: T_string . repeat_string

    T_string  shift, and go to state 63

    T_string  [reduce using rule 159 (repeat_string)]
    $default  reduce using rule 159 (repeat_string)

    repeat_string  go to state 64


State 4

    2 file_input: T_newline . file_input

    T_name         shift, and go to state 1
    T_number       shift, and go to state 2
    T_string       shift, and go to state 3
    T_newline      shift, and go to state 4
    T_eof          shift, and go to state 5
    T_del          shift, and go to state 6
    T_pass         shift, and go to state 7
    T_break        shift, and go to state 8
    T_continue     shift, and go to state 9
    T_return       shift, and go to state 10
    T_import       shift, and go to state 11
    T_from         shift, and go to state 12
    T_star         shift, and go to state 13
    T_Lparan       shift, and go to state 14
    T_if           shift, and go to state 15
    T_for          shift, and go to state 16
    T_not          shift, and go to state 17
    T_plus         shift, and go to state 18
    T_minus        shift, and go to state 19
    T_tilde        shift, and go to state 20
    T_squarebleft  shift, and go to state 21
    T_ellipsis     shift, and go to state 22
    T_none         shift, and go to state 23
    T_true         shift, and go to state 24
    T_false        shift, and go to state 25
    T_def          shift, and go to state 26

    $default  reduce using rule 1 (file_input)

    file_input                go to state 65
    stmt                      go to state 28
    simple_stmt               go to state 29
    small_stmt                go to state 30
    expr_stmt                 go to state 31
    testlist_star_expr        go to state 32
    first_testlist_star_expr  go to state 33
    del_stmt                  go to state 34
    pass_stmt                 go to state 35
    flow_stmt                 go to state 36
    break_stmt                go to state 37
    continue_stmt             go to state 38
    return_stmt               go to state 39
    import_stmt               go to state 40
    import_name               go to state 41
    import_from               go to state 42
    compound_stmt             go to state 43
    funcdef                   go to state 44
    if_stmt                   go to state 45
    for_stmt                  go to state 46
    test                      go to state 47
    or_test                   go to state 48
    and_test                  go to state 49
    not_test                  go to state 50
    comparison                go to state 51
    star_expr                 go to state 52
    expr                      go to state 53
    xor_expr                  go to state 54
    and_expr                  go to state 55
    shift_expr                go to state 56
    arith_expr                go to state 57
    term                      go to state 58
    factor                    go to state 59
    power                     go to state 60
    atom_expr                 go to state 61
    atom                      go to state 62


State 5

    4 file_input: T_eof .

    $default  reduce using rule 4 (file_input)


State 6

   38 del_stmt: T_del . exprlist

    T_name         shift, and go to state 1
    T_number       shift, and go to state 2
    T_string       shift, and go to state 3
    T_star         shift, and go to state 13
    T_Lparan       shift, and go to state 14
    T_plus         shift, and go to state 18
    T_minus        shift, and go to state 19
    T_tilde        shift, and go to state 20
    T_squarebleft  shift, and go to state 21
    T_ellipsis     shift, and go to state 22
    T_none         shift, and go to state 23
    T_true         shift, and go to state 24
    T_false        shift, and go to state 25

    star_expr       go to state 66
    expr            go to state 67
    xor_expr        go to state 54
    and_expr        go to state 55
    shift_expr      go to state 56
    arith_expr      go to state 57
    term            go to state 58
    factor          go to state 59
    power           go to state 60
    atom_expr       go to state 61
    atom            go to state 62
    exprlist        go to state 68
    first_exprlist  go to state 69


State 7

   39 pass_stmt: T_pass .

    $default  reduce using rule 39 (pass_stmt)


State 8

   43 break_stmt: T_break .

    $default  reduce using rule 43 (break_stmt)


State 9

   44 continue_stmt: T_continue .

    $default  reduce using rule 44 (continue_stmt)


State 10

   45 return_stmt: T_return . optional_return

    T_name         shift, and go to state 1
    T_number       shift, and go to state 2
    T_string       shift, and go to state 3
    T_Lparan       shift, and go to state 14
    T_not          shift, and go to state 17
    T_plus         shift, and go to state 18
    T_minus        shift, and go to state 19
    T_tilde        shift, and go to state 20
    T_squarebleft  shift, and go to state 21
    T_ellipsis     shift, and go to state 22
    T_none         shift, and go to state 23
    T_true         shift, and go to state 24
    T_false        shift, and go to state 25

    T_name         [reduce using rule 46 (optional_return)]
    T_number       [reduce using rule 46 (optional_return)]
    T_string       [reduce using rule 46 (optional_return)]
    T_Lparan       [reduce using rule 46 (optional_return)]
    T_not          [reduce using rule 46 (optional_return)]
    T_plus         [reduce using rule 46 (optional_return)]
    T_minus        [reduce using rule 46 (optional_return)]
    T_tilde        [reduce using rule 46 (optional_return)]
    T_squarebleft  [reduce using rule 46 (optional_return)]
    T_ellipsis     [reduce using rule 46 (optional_return)]
    T_none         [reduce using rule 46 (optional_return)]
    T_true         [reduce using rule 46 (optional_return)]
    T_false        [reduce using rule 46 (optional_return)]
    $default       reduce using rule 46 (optional_return)

    optional_return  go to state 70
    test             go to state 71
    or_test          go to state 48
    and_test         go to state 49
    not_test         go to state 50
    comparison       go to state 51
    expr             go to state 53
    xor_expr         go to state 54
    and_expr         go to state 55
    shift_expr       go to state 56
    arith_expr       go to state 57
    term             go to state 58
    factor           go to state 59
    power            go to state 60
    atom_expr        go to state 61
    atom             go to state 62
    testlist         go to state 72


State 11

   50 import_name: T_import . dotted_as_names

    T_name  shift, and go to state 73

    dotted_as_name   go to state 74
    dotted_as_names  go to state 75
    dotted_name      go to state 76


State 12

   51 import_from: T_from . dotted_name T_import end_import_from

    T_name  shift, and go to state 73

    dotted_name  go to state 77


State 13

  114 star_expr: T_star . expr

    T_name         shift, and go to state 1
    T_number       shift, and go to state 2
    T_string       shift, and go to state 3
    T_Lparan       shift, and go to state 14
    T_plus         shift, and go to state 18
    T_minus        shift, and go to state 19
    T_tilde        shift, and go to state 20
    T_squarebleft  shift, and go to state 21
    T_ellipsis     shift, and go to state 22
    T_none         shift, and go to state 23
    T_true         shift, and go to state 24
    T_false        shift, and go to state 25

    expr        go to state 78
    xor_expr    go to state 54
    and_expr    go to state 55
    shift_expr  go to state 56
    arith_expr  go to state 57
    term        go to state 58
    factor      go to state 59
    power       go to state 60
    atom_expr   go to state 61
    atom        go to state 62


State 14

  148 atom: T_Lparan . optional_testlist_comp T_Rparan

    T_name         shift, and go to state 1
    T_number       shift, and go to state 2
    T_string       shift, and go to state 3
    T_star         shift, and go to state 13
    T_Lparan       shift, and go to state 14
    T_not          shift, and go to state 17
    T_plus         shift, and go to state 18
    T_minus        shift, and go to state 19
    T_tilde        shift, and go to state 20
    T_squarebleft  shift, and go to state 21
    T_ellipsis     shift, and go to state 22
    T_none         shift, and go to state 23
    T_true         shift, and go to state 24
    T_false        shift, and go to state 25

    $default  reduce using rule 157 (optional_testlist_comp)
